src/styles/layout.scss
header {
    span {
        font-size: 0.875rem;
    }
}

main {
    margin-top: 4rem;

    p,
    li {
        line-height: 2;

        code {
            padding: 2px 6px;
        }
    }

    ul {
        padding-inline-start: 1.8rem;
    }

    pre {
        border-radius: 6px;
        padding: 0.875rem 1rem;
        background-color: $background-secondary !important;
        overflow-x: auto;

        code {
            line-height: 1.6;
        }
    }

    img {
        max-width: 100%;
    }

    code {
        letter-spacing: normal;
        background-color: $background-secondary;
        border-radius: 4px;
        font-size: 0.925rem;
    }
}

footer {
    margin-top: 4rem;
    font-size: 0.875rem;
}

